force-app/main/default/objects/Assigned_Reviewer__c/Assigned_Reviewer__c.object-meta.xml
<CustomObject>
    <label>Assigned Reviewer</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Assigned Reviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>