force-app/main/default/objects/Assigned_Reviewer__c/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grants</label>
    <referenceTo>Grants__c</referenceTo>
    <relationshipLabel>Assigned Reviewers</relationshipLabel>
    <relationshipName>Assigned_Reviewers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>