force-app/main/default/objects/Assigned_Reviewer__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <formula>Grants__r.Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference</label>
    <type>Text</type>
</CustomField>